--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,7 @@ h2 {
 	padding: 0;
 	place-self: center;
 	place-content: center;
-	margin: 0;	
+	margin: 0;
 	padding: 0;
 }
 
@@ -43,20 +43,18 @@ h2 {
 	top: 48%;
 }
 
-#overlay{
+#overlay {
 	top: 5%;
 	color: rgba($color: #979595, $alpha: 0.04);
 	position: absolute;
 	font-size: 560px;
 }
 
-
 .content {
-	
 	height: 80vh;
 	display: grid;
 	place-items: center;
-	margin: 0;	
+	margin: 0;
 	padding: 0;
 }
 
@@ -241,4 +239,54 @@ img {
 
 .scrolling-active li a {
 	color: white;
+}
+
+// scroll button
+
+.scroll-down {
+	height: 50px;
+	width: 30px;
+	border: 2px solid $secondary-color;
+	position: absolute;
+	left: 50%;
+	bottom: 20px;
+
+	border-radius: 50px;
+	cursor: pointer;
+}
+
+.scroll-down::before,
+.scroll-down::after {
+	content: "";
+	position: absolute;
+	top: 10%;
+	left: 50%;
+	border: 2px solid $primary-color;
+	height: 10px;
+	width: 10px;
+	transform: translate(-50%, -100%) rotate(45deg);
+	border-top: transparent;
+	border-left: transparent;
+	animation: scroll-down 1s ease-in-out infinite;
+}
+
+.scroll-down::after {
+	top: 20%;
+	animation-delay: 0.3s;
+}
+
+@keyframes scroll-down {
+	0% {
+		opacity: 0;
+	}
+	30% {
+		opacity: 1;
+	}
+	60% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+		top: 90%;
+	}
 }
