--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
 	font-family: "Lato", sans-serif;
 }
 
+a, a:active, a:visited { 
+	text-decoration: none;
+	color: inherit;
+}
+
 .hero-section {
 	display: flex;
 	height: 100vh;
@@ -21,6 +26,7 @@ body {
 }
 
 nav {
+	height: 100px;
 	z-index: 10;
 	position: fixed;
 	width: 100%;
@@ -28,7 +34,9 @@ nav {
 	color: rgb(0, 0, 0);
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
+
 
 nav .mainMenu {
 	display: flex;
@@ -120,15 +128,17 @@ nav .logo {
 	margin-top: 20px;
 	font-size: 1.5rem;
 	padding: 0.5rem 1.5rem;
-	color: #f24080 !important;
+	color: #fff !important;
+	background-color: #f24080 !important;
 	border-radius: 15px;
 	transition: 0.3s;
 	border: none;
 }
 
 .hero-content button:hover {
-	background-color: #f24080 !important;
-	color: white !important;
+	
+	background-color: white !important;
+	color: #f24080 !important;
 	border: none;
 	border-radius: 15px;
 	transition: 0.3s;
@@ -291,4 +301,39 @@ nav .logo {
 	.about-section button {
 		font-size: 0.5rem;
 	}
+}
+
+
+.main-menu-scrolled { 
+	background-color: #000000 !important;
+}
+
+.line-container { 
+	position: absolute;
+	top: 120px;
+	right: 0;
+	display: flex;
+	place-content: center;
+	place-items: center;
+	gap: 20px;
+	margin-right: 20px;
+}
+
+.fa-line { 
+	margin-left: auto;
+	color: green;
+	
+}
+
+.qrcode { 
+	width: 50px;
+	height: auto;
+	margin: 0;
+	padding: 0;
+
+	margin-right: auto;
+}
+
+nav h2 { 
+	margin: 0 20px;
 }
